truffle/src/com.oracle.truffle.sl.test/src/tests/error/TypeError06.sl
function main() {
  defineFunction(3);
}  
